--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,31 @@
-group 'TaskManager'
+group 'app'
 version '1.0'
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
-//noinspection GroovyUnusedAssignment
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.testfx', name: 'testfx-core', version: '4.0.6-alpha'
+    testCompile group: 'org.testfx', name: 'testfx-junit', version: '4.0.6-alpha'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
+    testCompile group: 'org.loadui', name: 'testFx', version: '3.1.2'
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = false
+    }
+}
+
+test.finalizedBy jacocoTestReport
+
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+tasks.withType(Javadoc) { options.encoding = 'UTF-8' }
