--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 jacocoTestReport {
     reports {
         xml.enabled = true
-        html.enabled = false
+        html.enabled = true
     }
 }
 
