--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 script:
-  - gradle clean
+  - gradle clean build
 # updating oracle JDK 8 to a recent release
 addons:
   apt:
